# criminal-database-face-scanner

./: CMakeLists.txt  README.md
attempt3/: CMakeLists.txt
attempt3/include/: FaceDatabase.h  FaceDetector.h  FaceRecognizer.h  main.h
attempt3/src/: FaceDatabase.cpp  FaceDetector.cpp  FaceRecognizer.cpp  main.cpp
